GNOME Bugzilla – Bug 618041
[everything] Fixes revealed by better parameter annotation
Last modified: 2015-02-07 16:44:28 UTC
(length) annotation takes a parameter name not an index. (scope infinite) was removed, so the test for it should be removed too.
Created attachment 160529 [details] [review] [everything] Fixes revealed by better parameter annotation
Review of attachment 160529 [details] [review]: Would prefer two separate commits. But looks good.
Created attachment 160535 [details] [review] [everything] Fix length annotations Length annotations take a parameter name not a parameter index.
Created attachment 160536 [details] [review] [everything] Remove test_callback_infinite The 'infinite' value for callback scope was removed, so the test case for it needs to be removed as well.
Attachment 160535 [details] pushed as fc43514 - [everything] Fix length annotations Attachment 160536 [details] pushed as 52b0e7b - [everything] Remove test_callback_infinite
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]