[everything] Fix length annotations

Length annotations take a parameter name not a parameter index.

https://bugzilla.gnome.org/show_bug.cgi?id=618041